srotas/networking/netpol/allow-traefik-to-fe.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traefik-to-fe
  namespace: apps
spec:
  podSelector:
    matchLabels:
      app: srotas-fe
  policyTypes: ["Ingress"]
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: traefik
    ports:
    - protocol: TCP
      port: 3000
